# idaas

./: CLAUDE.md  README.md
idass/: Cargo.toml  Dockerfile  docker-compose.test.yml  docker-compose.yml  openapi.yaml  rust-toolchain.toml
idass-admin/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
idass-admin/e2e/: auth.spec.ts  connections.spec.ts  organizations.spec.ts  tenants.spec.ts  users.spec.ts
idass-admin/e2e/fixtures/: api.ts  base.ts
idass-admin/src/: App.tsx  main.tsx
idass-admin/src/api/: client.ts  connections.ts  organizations.ts  tenants.ts  types.ts  users.ts
idass-admin/src/components/: ConfirmDialog.tsx  StatusBadge.tsx  StrategyBadge.tsx
idass-admin/src/hooks/: useConnections.ts  useOrganizations.ts  useTenants.ts  useUsers.ts
idass-admin/src/layout/: AppLayout.tsx  Sidebar.tsx
idass-admin/src/lib/: auth.ts  queryClient.ts
idass-admin/src/pages/connections/: ConnectionFormDialog.tsx  ConnectionListPage.tsx
idass-admin/src/pages/login/: LoginPage.tsx
idass-admin/src/pages/migrate/: MigrateDialog.tsx
idass-admin/src/pages/organizations/: OrganizationListPage.tsx
idass-admin/src/pages/tenants/: TenantDetailLayout.tsx  TenantListPage.tsx
idass-admin/src/pages/users/: UserListPage.tsx
idass/api-gateway/: Cargo.toml
idass/api-gateway/src/: csrf.rs  lib.rs  main.rs  ports.rs  router.rs  services.rs
idass/api-gateway/tests/: contract_tests.rs  handler_tests.rs  integration_test.rs
idass/api-gateway/tests/helpers/: mod.rs
idass/migrations/: 001_initial.sql
idass/mod-auth/: Cargo.toml
idass/mod-auth/src/: db_auth.rs  lib.rs  oauth_google.rs  oidc.rs  saml_enterprise.rs
idass/mod-mgmt/: Cargo.toml
idass/mod-mgmt/src/: connection_crud.rs  lib.rs  migration.rs  org_crud.rs  tenant_crud.rs  user_crud.rs
idass/mod-token/: Cargo.toml
idass/mod-token/src/: lib.rs  webhooks.rs
idass/shared-kernel/: Cargo.toml
idass/shared-kernel/src/: crypto.rs  error.rs  models.rs
