[package]
name    = "mod-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-kernel = { path = "../shared-kernel" }
tokio         = { workspace = true }
sqlx          = { workspace = true }
argon2        = { workspace = true }
reqwest       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
uuid          = { workspace = true }
chrono        = { workspace = true }
tracing       = { workspace = true }
base64        = { workspace = true }
urlencoding   = "2.1"
flate2        = "1.0"
openidconnect = { version = "3", default-features = false }

[dev-dependencies]
tokio        = { workspace = true }
wiremock     = "=0.6.2"
rand_core    = "0.6"
rsa          = { version = "0.9", features = ["pem"] }
rand         = "0.8"
jsonwebtoken = { workspace = true }
sqlx         = { workspace = true, features = ["macros"] }
