[package]
name    = "mod-mgmt"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-kernel = { path = "../shared-kernel" }
tokio         = { workspace = true }
sqlx          = { workspace = true }
argon2        = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
uuid          = { workspace = true }
chrono        = { workspace = true }
tracing       = { workspace = true }
rand_core     = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
