[package]
name    = "shared-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
serde        = { workspace = true }
serde_json   = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
thiserror    = { workspace = true }
sqlx         = { workspace = true }
axum         = { workspace = true }
aes-gcm      = { workspace = true }
base64       = { workspace = true }
tracing      = { workspace = true }
